Fix crash on servers Closes #157