@@ -1,6 +1,5 @@
 package de.maxhenkel.car.mixins;
 
-import com.google.common.collect.ImmutableSet;
 import de.maxhenkel.car.items.ModItems;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.npc.AbstractVillager;
@@ -11,6 +10,8 @@ import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
+import java.util.Set;
+
 @Mixin(Villager.class)
 public abstract class VillagerEntityMixin extends AbstractVillager {
 
@@ -20,7 +21,7 @@ public abstract class VillagerEntityMixin extends AbstractVillager {
 
     @Inject(method = "hasFarmSeeds", at = @At("HEAD"), cancellable = true)
     public void hasFarmSeeds(CallbackInfoReturnable<Boolean> cir) {
-        if (getInventory().hasAnyOf(ImmutableSet.of(ModItems.CANOLA_SEEDS.get()))) {
+        if (getInventory().hasAnyOf(Set.of(ModItems.CANOLA_SEEDS.get()))) {
             cir.setReturnValue(true);
         }
     }
